# Arc

./: Cargo.toml  GNUmakefile  LICENSE  bors.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: rust.yml
arch/: Cargo.toml
arch/src/: lib.rs
arch/src/aarch64/: mod.rs
arch/src/x86_64/: mod.rs
kernel/: Cargo.toml  GNUmakefile  kernel.c  linker.ld
kernel/.cargo/: config.toml
kernel/src/: main.rs  qemu.rs  serial.rs
scripts/: build.sh  debug.sh  run.sh
targets/: aarch64-arc-uefi.json  aarch64-arc.json  x86_64-arc-uefi.json
xtask/: Cargo.toml
xtask/src/: main.rs
