[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.10.12"
arch = { path = "../arch" }
uart_16550 = "0.2.14"
spin = { version = "0.9.0", features = ["lazy"] }

[dev-dependencies]
bootloader-locator = "0.0.4"

# Disables unwinding
[profile.dev]
opt-level = 1